[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "wheel", "versioneer[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "solarfactors"
dynamic = ["version"]
description = "2D View Factor Model to calculate the irradiance incident on various surfaces of PV arrays"
readme = "README.rst"
authors = [
    {name = "SunPower and pvlib python Developers", email = "pvlib-admin@googlegroups.com"},
]
license = {text = "BSD 3-Clause"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pvlib>=0.9.0",
    "shapely>=2.0",
    "matplotlib",
]
urls = {Homepage = "https://github.com/pvlib/solarfactors"}

[project.optional-dependencies]
test = [
    "pytest>=3.2.1",
    "pytest-mock>=1.10.0",
    "mock",
]
doc = [
    "sphinx",
    "sphinx_rtd_theme",
    "nbsphinx",
    "sphinxcontrib_github_alt",
    "ipykernel",
]

[tool.setuptools]
packages = [
    "pvfactors",
    "pvfactors.geometry",
    "pvfactors.irradiance",
    "pvfactors.viewfactors",
]

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "pvfactors/_version.py"
versionfile_build = "pvfactors/_version.py"
tag_prefix = ""
parentdir_prefix = "pvfactors-"
