[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solarfactors"
dynamic = ["version"]
description = "2D View Factor Model to calculate the irradiance incident on various surfaces of PV arrays"
readme = "README.rst"
authors = [
    {name = "SunPower and pvlib python Developers", email = "pvlib-admin@googlegroups.com"},
]
license = {text = "BSD 3-Clause"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.9"
dependencies = [
    "pvlib>=0.9.0",
    "shapely>=2.0",
    "matplotlib",
    "numpy",
    "pandas",
]

[project.optional-dependencies]
test = [
    "pytest>=3.2.1",
    "pytest-mock>=1.10.0",
    "mock",
]
doc = [
    "sphinx",
    "sphinx_rtd_theme",
    "nbsphinx",
    "sphinxcontrib_github_alt",
    "ipykernel",
]

[project.urls]
"Bug Tracker" = "https://github.com/pvlib/solarfactors/issues"
Documentation = "https://solarfactors.readthedocs.io/"
"Source Code" = "https://github.com/pvlib/solarfactors"

[tool.setuptools]
packages = [
    "pvfactors",
    "pvfactors.geometry",
    "pvfactors.irradiance",
    "pvfactors.viewfactors",
]

[tool.setuptools.exclude-package-data]
pvfactors = ["tests"]

[tool.setuptools_scm]
